Manu Bar update

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -88,9 +88,10 @@ const metadata = {
         icon: 'tabler:template',
       },
       {
-        title: 'Blog',
+        title: 'Lab News',
         description:
           'Nullam efficitur volutpat sem sed fringilla. Suspendisse et enim eu orci volutpat laoreet ac vitae libero.',
+
         icon: 'tabler:template',
       },
       {
