--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ const metadata = {
       >
       <span class="block mb-1 sm:hidden font-bold text-blue-600">AstroWind: Production-ready.</span>
       Suitable for Startups, Small Business, SaaS websites, Professional Portfolios, Marketing websites, Landing Pages &
-      Blogs.
+      Lab News.
     </Fragment> -->
   </Hero>
 
@@ -79,7 +79,7 @@ const metadata = {
       {
         title: 'Ready-to-use Components',
         description:
-          'Widgets made with Tailwind CSS ready to be used in Marketing Websites, SaaS, Blogs, Personal Profiles, Small Business...',
+          'Widgets made with Tailwind CSS ready to be used in Marketing Websites, SaaS, Lab News, Personal Profiles, Small Business...',
         icon: 'tabler:components',
       },
       {
@@ -323,8 +323,8 @@ const metadata = {
   <!-- HighlightedPosts Widget ******* -->
 
   <BlogLatestPosts
-    title="Find out more content in our Blog"
-    information={`Follow our blog for the latest news in the LAB. Stay updated with our ongoing projects, and recent publications. The following are the latest highlightm but check out for all posts.`}
+    title="Find out more content in our Lab News"
+    information={`Follow our Lab News for the latest updates in the LAB. Stay updated with our ongoing projects, and recent publications. The following are the latest highlights but check out for all posts.`}
   />
 
   <!-- FAQs Widget ******************* -->
