--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -56,9 +56,10 @@ const metadata = {
         icon: 'tabler:shopping-cart',
       },
       {
-        title: 'Blog',
+        title: 'Lab News',
         description:
-          'With attention to typography, these templates empower effective content presentation for writers at any stage, ensuring visually engaging and user-friendly blogs.',
+          'With attention to typography, these templates empower effective content presentation for writers at any stage, ensuring visually engaging and user-friendly news sections.',
+
         icon: 'tabler:article',
       },
       {
