--- a/src/pages/research/personal.astro
+++ b/src/pages/research/personal.astro
@@ -395,7 +395,7 @@ const metadata = {
 
   <BlogLatestPosts
     id="blog"
-    title="Explore my insightful articles on my blog"
+    title="Explore my insightful articles in Lab News"
     information={`Dive into a realm of design wisdom and creative inspiration, where you'll find invaluable insights, practical tips, and captivating narratives that elevate and enrich your creative journey.`}
   >
     <Fragment slot="bg">
